fix: Add logging and secret keys store bug fixed